src/paths/snapshots/mandala__paths__curves__curve_tests__f32-2d-CubicCurve.snap
---
source: src/paths/curves.rs
expression: "[curve.eval(0.0), curve.eval(0.25), curve.eval(0.5), curve.eval(0.75),\n        curve.eval(1.0)]"
---
[
    Vector2 {
        x: 0.0,
        y: 0.0,
    },
    Vector2 {
        x: 0.75,
        y: 0.75,
    },
    Vector2 {
        x: 1.5,
        y: 1.5,
    },
    Vector2 {
        x: 2.25,
        y: 2.25,
    },
    Vector2 {
        x: 3.0,
        y: 3.0,
    },
]
