src/paths/snapshots/mandala__paths__curves__curve_tests__f32-2d-CubicCurve_VectorValuedFn.snap
---
source: src/paths/curves.rs
expression: "(eval_points, sample_points, derivative_points, normal_points)"
---
(
    [
        Vector2 {
            x: 0.0,
            y: 0.0,
        },
        Vector2 {
            x: 0.29999998,
            y: 2.9729998,
        },
        Vector2 {
            x: 0.6,
            y: 5.784001,
        },
        Vector2 {
            x: 0.90000004,
            y: 8.271,
        },
        Vector2 {
            x: 1.2,
            y: 10.272,
        },
        Vector2 {
            x: 1.5,
            y: 11.625,
        },
        Vector2 {
            x: 1.8,
            y: 12.167999,
        },
        Vector2 {
            x: 2.1,
            y: 11.739,
        },
        Vector2 {
            x: 2.4,
            y: 10.176001,
        },
        Vector2 {
            x: 2.6999998,
            y: 7.317001,
        },
        Vector2 {
            x: 3.0,
            y: 3.0,
        },
    ],
    [
        Vector2 {
            x: 0.0,
            y: 0.0,
        },
        Vector2 {
            x: 0.3333333,
            y: 3.2962964,
        },
        Vector2 {
            x: 0.6666666,
            y: 6.3703704,
        },
        Vector2 {
            x: 0.99999994,
            y: 8.999999,
        },
        Vector2 {
            x: 1.3333334,
            y: 10.962963,
        },
        Vector2 {
            x: 1.6666667,
            y: 12.037038,
        },
        Vector2 {
            x: 2.0,
            y: 12.0,
        },
        Vector2 {
            x: 2.3333333,
            y: 10.629628,
        },
        Vector2 {
            x: 2.6666665,
            y: 7.703703,
        },
        Vector2 {
            x: 3.0,
            y: 3.0,
        },
    ],
    [
        Vector2 {
            x: 3.0,
            y: 29.999994,
        },
        Vector2 {
            x: 3.0000248,
            y: 29.190252,
        },
        Vector2 {
            x: 2.9999385,
            y: 26.760263,
        },
        Vector2 {
            x: 2.9998522,
            y: 22.70752,
        },
        Vector2 {
            x: 2.9998522,
            y: 17.039616,
        },
        Vector2 {
            x: 3.0001974,
            y: 9.75172,
        },
        Vector2 {
            x: 3.0001974,
            y: 0.8410704,
        },
        Vector2 {
            x: 3.00037,
            y: -9.692335,
        },
        Vector2 {
            x: 3.0000248,
            y: -21.84297,
        },
        Vector2 {
            x: 3.0007155,
            y: -35.611526,
        },
        Vector2 {
            x: 3.0000248,
            y: -50.999043,
        },
    ],
    [
        Vector2 {
            x: -0.9950372,
            y: 0.09950374,
        },
        Vector2 {
            x: -0.99476016,
            y: 0.10223636,
        },
        Vector2 {
            x: -0.9937749,
            y: 0.11140636,
        },
        Vector2 {
            x: -0.9913863,
            y: 0.13097037,
        },
        Vector2 {
            x: -0.98485404,
            y: 0.17338516,
        },
        Vector2 {
            x: -0.9557881,
            y: 0.29405612,
        },
        Vector2 {
            x: -0.26993203,
            y: 0.96287936,
        },
        Vector2 {
            x: 0.95527583,
            y: 0.29571623,
        },
        Vector2 {
            x: 0.9906995,
            y: 0.13606772,
        },
        Vector2 {
            x: 0.9964688,
            y: 0.08396493,
        },
        Vector2 {
            x: 0.9982743,
            y: 0.058723606,
        },
    ],
)
