src/paths/snapshots/mandala__paths__curves__curve_tests__f32-2d-QuadraticCurve_VectorValuedFn.snap
---
source: src/paths/curves.rs
expression: "(eval_points, sample_points, derivative_points, normal_points)"
---
(
    [
        Vector2 {
            x: 0.0,
            y: 0.0,
        },
        Vector2 {
            x: 0.19999999,
            y: 1.8199999,
        },
        Vector2 {
            x: 0.40000004,
            y: 3.2800002,
        },
        Vector2 {
            x: 0.6,
            y: 4.38,
        },
        Vector2 {
            x: 0.8000001,
            y: 5.1200004,
        },
        Vector2 {
            x: 1.0,
            y: 5.5,
        },
        Vector2 {
            x: 1.2,
            y: 5.5199995,
        },
        Vector2 {
            x: 1.4,
            y: 5.1800003,
        },
        Vector2 {
            x: 1.6000001,
            y: 4.48,
        },
        Vector2 {
            x: 1.8,
            y: 3.4200003,
        },
        Vector2 {
            x: 2.0,
            y: 2.0,
        },
    ],
    [
        Vector2 {
            x: 0.0,
            y: 0.0,
        },
        Vector2 {
            x: 0.22222222,
            y: 2.0,
        },
        Vector2 {
            x: 0.44444445,
            y: 3.5555556,
        },
        Vector2 {
            x: 0.6666666,
            y: 4.6666665,
        },
        Vector2 {
            x: 0.88888896,
            y: 5.333334,
        },
        Vector2 {
            x: 1.1111112,
            y: 5.5555553,
        },
        Vector2 {
            x: 1.3333334,
            y: 5.333333,
        },
        Vector2 {
            x: 1.5555556,
            y: 4.6666665,
        },
        Vector2 {
            x: 1.7777778,
            y: 3.5555553,
        },
        Vector2 {
            x: 2.0,
            y: 2.0,
        },
    ],
    [
        Vector2 {
            x: 2.0,
            y: 20.0,
        },
        Vector2 {
            x: 2.0000021,
            y: 16.40001,
        },
        Vector2 {
            x: 1.999959,
            y: 12.799738,
        },
        Vector2 {
            x: 1.9998727,
            y: 9.199985,
        },
        Vector2 {
            x: 1.999959,
            y: 5.6002307,
        },
        Vector2 {
            x: 2.0001316,
            y: 2.0011675,
        },
        Vector2 {
            x: 2.0001316,
            y: -1.5999672,
        },
        Vector2 {
            x: 2.0001316,
            y: -5.2004113,
        },
        Vector2 {
            x: 2.0001316,
            y: -8.800165,
        },
        Vector2 {
            x: 2.0001316,
            y: -12.400609,
        },
        Vector2 {
            x: 1.999959,
            y: -15.999672,
        },
    ],
    [
        Vector2 {
            x: -0.99503726,
            y: 0.099503726,
        },
        Vector2 {
            x: -0.9926459,
            y: 0.12105444,
        },
        Vector2 {
            x: -0.988012,
            y: 0.15437688,
        },
        Vector2 {
            x: -0.9771791,
            y: 0.21241707,
        },
        Vector2 {
            x: -0.9417485,
            y: 0.33631802,
        },
        Vector2 {
            x: -0.7072899,
            y: 0.7069237,
        },
        Vector2 {
            x: 0.6246622,
            y: 0.7808951,
        },
        Vector2 {
            x: 0.9333472,
            y: 0.35897493,
        },
        Vector2 {
            x: 0.97513056,
            y: 0.221631,
        },
        Vector2 {
            x: 0.98724073,
            y: 0.15923503,
        },
        Vector2 {
            x: 0.99227786,
            y: 0.12403473,
        },
    ],
)
