src/paths/snapshots/mandala__paths__curves__curve_tests__f32-3d-CubicCurve_VectorValuedFn.snap
---
source: src/paths/curves.rs
expression: "(eval_points, sample_points, derivative_points, normal_points)"
---
(
    [
        Vector3 {
            x: 0.0,
            y: 0.0,
            z: 0.0,
        },
        Vector3 {
            x: 0.29999998,
            y: 2.9729998,
            z: 0.29999998,
        },
        Vector3 {
            x: 0.6,
            y: 5.784001,
            z: 0.6,
        },
        Vector3 {
            x: 0.90000004,
            y: 8.271,
            z: 0.90000004,
        },
        Vector3 {
            x: 1.2,
            y: 10.272,
            z: 1.2,
        },
        Vector3 {
            x: 1.5,
            y: 11.625,
            z: 1.5,
        },
        Vector3 {
            x: 1.8,
            y: 12.167999,
            z: 1.8,
        },
        Vector3 {
            x: 2.1,
            y: 11.739,
            z: 2.1,
        },
        Vector3 {
            x: 2.4,
            y: 10.176001,
            z: 2.4,
        },
        Vector3 {
            x: 2.6999998,
            y: 7.317001,
            z: 2.6999998,
        },
        Vector3 {
            x: 3.0,
            y: 3.0,
            z: 3.0,
        },
    ],
    [
        Vector3 {
            x: 0.0,
            y: 0.0,
            z: 0.0,
        },
        Vector3 {
            x: 0.3333333,
            y: 3.2962964,
            z: 0.3333333,
        },
        Vector3 {
            x: 0.6666666,
            y: 6.3703704,
            z: 0.6666666,
        },
        Vector3 {
            x: 0.99999994,
            y: 8.999999,
            z: 0.99999994,
        },
        Vector3 {
            x: 1.3333334,
            y: 10.962963,
            z: 1.3333334,
        },
        Vector3 {
            x: 1.6666667,
            y: 12.037038,
            z: 1.6666667,
        },
        Vector3 {
            x: 2.0,
            y: 12.0,
            z: 2.0,
        },
        Vector3 {
            x: 2.3333333,
            y: 10.629628,
            z: 2.3333333,
        },
        Vector3 {
            x: 2.6666665,
            y: 7.703703,
            z: 2.6666665,
        },
        Vector3 {
            x: 3.0,
            y: 3.0,
            z: 3.0,
        },
    ],
    [
        Vector3 {
            x: 3.0,
            y: 29.999994,
            z: 3.0,
        },
        Vector3 {
            x: 3.0000248,
            y: 29.190252,
            z: 3.0000248,
        },
        Vector3 {
            x: 2.9999385,
            y: 26.760263,
            z: 2.9999385,
        },
        Vector3 {
            x: 2.9998522,
            y: 22.70752,
            z: 2.9998522,
        },
        Vector3 {
            x: 2.9998522,
            y: 17.039616,
            z: 2.9998522,
        },
        Vector3 {
            x: 3.0001974,
            y: 9.75172,
            z: 3.0001974,
        },
        Vector3 {
            x: 3.0001974,
            y: 0.8410704,
            z: 3.0001974,
        },
        Vector3 {
            x: 3.00037,
            y: -9.692335,
            z: 3.00037,
        },
        Vector3 {
            x: 3.0000248,
            y: -21.84297,
            z: 3.0000248,
        },
        Vector3 {
            x: 3.0007155,
            y: -35.611526,
            z: 3.0007155,
        },
        Vector3 {
            x: 3.0000248,
            y: -50.999043,
            z: 3.0000248,
        },
    ],
    [
        Vector3 {
            x: -0.08920648,
            y: 0.10793537,
            z: -0.99014753,
        },
        Vector3 {
            x: -0.09135707,
            y: 0.11109537,
            z: -0.98960185,
        },
        Vector3 {
            x: -0.09845459,
            y: 0.1217584,
            z: -0.98766476,
        },
        Vector3 {
            x: -0.11298074,
            y: 0.14478707,
            z: -0.98299134,
        },
        Vector3 {
            x: -0.14158723,
            y: 0.19576305,
            z: -0.97037613,
        },
        Vector3 {
            x: -0.20176628,
            y: 0.34418702,
            z: -0.9169655,
        },
        Vector3 {
            x: -0.079634316,
            y: 0.97767544,
            z: -0.19444561,
        },
        Vector3 {
            x: 0.20238276,
            y: 0.34622675,
            z: 0.9160613,
        },
        Vector3 {
            x: 0.11662746,
            y: 0.15084362,
            z: 0.9816538,
        },
        Vector3 {
            x: 0.07666784,
            y: 0.090130806,
            z: 0.9929745,
        },
        Vector3 {
            x: 0.05518567,
            y: 0.061868966,
            z: 0.9965574,
        },
    ],
)
