src/paths/snapshots/mandala__paths__curves__curve_tests__f32-3d-QuadraticCurve_VectorValuedFn.snap
---
source: src/paths/curves.rs
expression: "(eval_points, sample_points, derivative_points, normal_points)"
---
(
    [
        Vector3 {
            x: 0.0,
            y: 0.0,
            z: 0.0,
        },
        Vector3 {
            x: 0.19999999,
            y: 1.8199999,
            z: 0.19999999,
        },
        Vector3 {
            x: 0.40000004,
            y: 3.2800002,
            z: 0.40000004,
        },
        Vector3 {
            x: 0.6,
            y: 4.38,
            z: 0.6,
        },
        Vector3 {
            x: 0.8000001,
            y: 5.1200004,
            z: 0.8000001,
        },
        Vector3 {
            x: 1.0,
            y: 5.5,
            z: 1.0,
        },
        Vector3 {
            x: 1.2,
            y: 5.5199995,
            z: 1.2,
        },
        Vector3 {
            x: 1.4,
            y: 5.1800003,
            z: 1.4,
        },
        Vector3 {
            x: 1.6000001,
            y: 4.48,
            z: 1.6000001,
        },
        Vector3 {
            x: 1.8,
            y: 3.4200003,
            z: 1.8,
        },
        Vector3 {
            x: 2.0,
            y: 2.0,
            z: 2.0,
        },
    ],
    [
        Vector3 {
            x: 0.0,
            y: 0.0,
            z: 0.0,
        },
        Vector3 {
            x: 0.22222222,
            y: 2.0,
            z: 0.22222222,
        },
        Vector3 {
            x: 0.44444445,
            y: 3.5555556,
            z: 0.44444445,
        },
        Vector3 {
            x: 0.6666666,
            y: 4.6666665,
            z: 0.6666666,
        },
        Vector3 {
            x: 0.88888896,
            y: 5.333334,
            z: 0.88888896,
        },
        Vector3 {
            x: 1.1111112,
            y: 5.5555553,
            z: 1.1111112,
        },
        Vector3 {
            x: 1.3333334,
            y: 5.333333,
            z: 1.3333334,
        },
        Vector3 {
            x: 1.5555556,
            y: 4.6666665,
            z: 1.5555556,
        },
        Vector3 {
            x: 1.7777778,
            y: 3.5555553,
            z: 1.7777778,
        },
        Vector3 {
            x: 2.0,
            y: 2.0,
            z: 2.0,
        },
    ],
    [
        Vector3 {
            x: 2.0,
            y: 20.0,
            z: 2.0,
        },
        Vector3 {
            x: 1.9375,
            y: 16.0,
            z: 1.9375,
        },
        Vector3 {
            x: 1.875,
            y: 12.0,
            z: 1.875,
        },
        Vector3 {
            x: 2.0,
            y: 10.0,
            z: 2.0,
        },
        Vector3 {
            x: 2.0,
            y: 6.0,
            z: 2.0,
        },
        Vector3 {
            x: 2.0,
            y: 0.0,
            z: 2.0,
        },
        Vector3 {
            x: 2.0,
            y: -4.0,
            z: 2.0,
        },
        Vector3 {
            x: 2.0,
            y: -4.0,
            z: 2.0,
        },
        Vector3 {
            x: 2.0,
            y: -10.0,
            z: 2.0,
        },
        Vector3 {
            x: 2.0,
            y: -14.0,
            z: 2.0,
        },
        Vector3 {
            x: 2.0,
            y: -16.0,
            z: 2.0,
        },
    ],
    [
        Vector3 {
            x: -0.08920647,
            y: 0.10793525,
            z: -0.9901476,
        },
        Vector3 {
            x: -0.10509933,
            y: 0.132083,
            z: -0.9856512,
        },
        Vector3 {
            x: -0.12925535,
            y: 0.17276561,
            z: -0.97644514,
        },
        Vector3 {
            x: -0.15529808,
            y: 0.22350961,
            z: -0.9622505,
        },
        Vector3 {
            x: -0.20954661,
            y: 0.37136018,
            z: -0.90453404,
        },
        Vector3 {
            x: -0.0,
            y: 1.0,
            z: -0.0,
        },
        Vector3 {
            x: 0.23670065,
            y: 0.5265987,
            z: 0.81649655,
        },
        Vector3 {
            x: 0.23670065,
            y: 0.5265987,
            z: 0.81649655,
        },
        Vector3 {
            x: 0.15529808,
            y: 0.22350961,
            z: 0.9622505,
        },
        Vector3 {
            x: 0.1203961,
            y: 0.15722734,
            z: 0.9801961,
        },
        Vector3 {
            x: 0.1079272,
            y: 0.13658237,
            z: 0.9847319,
        },
    ],
)
