src/paths/snapshots/mandala__paths__curves__curve_tests__f64-3d-CubicCurve_VectorValuedFn.snap
---
source: src/paths/curves.rs
expression: "(eval_points, sample_points, derivative_points, normal_points)"
---
(
    [
        Vector3 {
            x: 0.0,
            y: 0.0,
            z: 0.0,
        },
        Vector3 {
            x: 0.30000000000000004,
            y: 2.9730000000000003,
            z: 0.30000000000000004,
        },
        Vector3 {
            x: 0.6000000000000002,
            y: 5.784000000000002,
            z: 0.6000000000000002,
        },
        Vector3 {
            x: 0.8999999999999998,
            y: 8.270999999999997,
            z: 0.8999999999999998,
        },
        Vector3 {
            x: 1.2000000000000002,
            y: 10.272000000000002,
            z: 1.2000000000000002,
        },
        Vector3 {
            x: 1.5,
            y: 11.625,
            z: 1.5,
        },
        Vector3 {
            x: 1.8000000000000003,
            y: 12.168000000000001,
            z: 1.8000000000000003,
        },
        Vector3 {
            x: 2.0999999999999996,
            y: 11.739,
            z: 2.0999999999999996,
        },
        Vector3 {
            x: 2.4000000000000004,
            y: 10.175999999999998,
            z: 2.4000000000000004,
        },
        Vector3 {
            x: 2.7,
            y: 7.316999999999999,
            z: 2.7,
        },
        Vector3 {
            x: 3.0,
            y: 3.0,
            z: 3.0,
        },
    ],
    [
        Vector3 {
            x: 0.0,
            y: 0.0,
            z: 0.0,
        },
        Vector3 {
            x: 0.33333333333333326,
            y: 3.2962962962962954,
            z: 0.33333333333333326,
        },
        Vector3 {
            x: 0.6666666666666666,
            y: 6.37037037037037,
            z: 0.6666666666666666,
        },
        Vector3 {
            x: 1.0,
            y: 9.0,
            z: 1.0,
        },
        Vector3 {
            x: 1.3333333333333333,
            y: 10.962962962962964,
            z: 1.3333333333333333,
        },
        Vector3 {
            x: 1.666666666666667,
            y: 12.037037037037036,
            z: 1.666666666666667,
        },
        Vector3 {
            x: 2.0,
            y: 12.0,
            z: 2.0,
        },
        Vector3 {
            x: 2.3333333333333335,
            y: 10.629629629629628,
            z: 2.3333333333333335,
        },
        Vector3 {
            x: 2.6666666666666665,
            y: 7.703703703703706,
            z: 2.6666666666666665,
        },
        Vector3 {
            x: 3.0,
            y: 3.0,
            z: 3.0,
        },
    ],
    [
        Vector3 {
            x: 3.0,
            y: 30.0,
            z: 3.0,
        },
        Vector3 {
            x: 2.875,
            y: 29.0,
            z: 2.875,
        },
        Vector3 {
            x: 3.0,
            y: 26.0,
            z: 3.0,
        },
        Vector3 {
            x: 3.0,
            y: 20.0,
            z: 3.0,
        },
        Vector3 {
            x: 3.0,
            y: 16.0,
            z: 3.0,
        },
        Vector3 {
            x: 3.0,
            y: 8.0,
            z: 3.0,
        },
        Vector3 {
            x: 3.0,
            y: 4.0,
            z: 3.0,
        },
        Vector3 {
            x: 3.0,
            y: 0.0,
            z: 3.0,
        },
        Vector3 {
            x: 4.0,
            y: -20.0,
            z: 4.0,
        },
        Vector3 {
            x: 3.0,
            y: -36.0,
            z: 3.0,
        },
        Vector3 {
            x: 2.0,
            y: -52.0,
            z: 2.0,
        },
    ],
    [
        Vector3 {
            x: -0.089206459970528,
            y: 0.10793540029472004,
            z: -0.9901475429766744,
        },
        Vector3 {
            x: -0.08853464889880946,
            y: 0.10695484589026971,
            z: -0.9903142313856512,
        },
        Vector3 {
            x: -0.1009014328020246,
            y: 0.12552091571578694,
            z: -0.9869465034014603,
        },
        Vector3 {
            x: -0.12517337949926324,
            y: 0.16551080333824508,
            z: -0.978231976089037,
        },
        Vector3 {
            x: -0.14830430889073756,
            y: 0.20904368591606637,
            z: -0.9665953493282832,
        },
        Vector3 {
            x: -0.21984835784398696,
            y: 0.41373771241603485,
            z: -0.8834522085987723,
        },
        Vector3 {
            x: -0.2330420373947872,
            y: 0.689277283473617,
            z: -0.6859943405700353,
        },
        Vector3 {
            x: -0.0,
            y: 1.0,
            z: -0.0,
        },
        Vector3 {
            x: 0.1552980596673317,
            y: 0.2235097016633414,
            z: 0.9622504486493764,
        },
        Vector3 {
            x: 0.07590946850811833,
            y: 0.08908637790258,
            z: 0.9931270663228415,
        },
        Vector3 {
            x: 0.036929802090937464,
            y: 0.039825145635626,
            z: 0.9985239844353392,
        },
    ],
)
