src/paths/snapshots/mandala__paths__curves__curve_tests__f64-3d-QuadraticCurve_VectorValuedFn.snap
---
source: src/paths/curves.rs
expression: "(eval_points, sample_points, derivative_points, normal_points)"
---
(
    [
        Vector3 {
            x: 0.0,
            y: 0.0,
            z: 0.0,
        },
        Vector3 {
            x: 0.2,
            y: 1.8200000000000003,
            z: 0.2,
        },
        Vector3 {
            x: 0.4000000000000001,
            y: 3.2800000000000007,
            z: 0.4000000000000001,
        },
        Vector3 {
            x: 0.6,
            y: 4.38,
            z: 0.6,
        },
        Vector3 {
            x: 0.8,
            y: 5.12,
            z: 0.8,
        },
        Vector3 {
            x: 1.0,
            y: 5.5,
            z: 1.0,
        },
        Vector3 {
            x: 1.2,
            y: 5.52,
            z: 1.2,
        },
        Vector3 {
            x: 1.4,
            y: 5.18,
            z: 1.4,
        },
        Vector3 {
            x: 1.6,
            y: 4.4799999999999995,
            z: 1.6,
        },
        Vector3 {
            x: 1.8,
            y: 3.42,
            z: 1.8,
        },
        Vector3 {
            x: 2.0,
            y: 2.0,
            z: 2.0,
        },
    ],
    [
        Vector3 {
            x: 0.0,
            y: 0.0,
            z: 0.0,
        },
        Vector3 {
            x: 0.2222222222222222,
            y: 2.0,
            z: 0.2222222222222222,
        },
        Vector3 {
            x: 0.4444444444444444,
            y: 3.5555555555555554,
            z: 0.4444444444444444,
        },
        Vector3 {
            x: 0.6666666666666667,
            y: 4.666666666666667,
            z: 0.6666666666666667,
        },
        Vector3 {
            x: 0.8888888888888888,
            y: 5.333333333333333,
            z: 0.8888888888888888,
        },
        Vector3 {
            x: 1.1111111111111112,
            y: 5.555555555555555,
            z: 1.1111111111111112,
        },
        Vector3 {
            x: 1.3333333333333333,
            y: 5.333333333333334,
            z: 1.3333333333333333,
        },
        Vector3 {
            x: 1.5555555555555556,
            y: 4.666666666666666,
            z: 1.5555555555555556,
        },
        Vector3 {
            x: 1.7777777777777777,
            y: 3.5555555555555562,
            z: 1.7777777777777777,
        },
        Vector3 {
            x: 2.0,
            y: 2.0,
            z: 2.0,
        },
    ],
    [
        Vector3 {
            x: 2.0,
            y: 20.0,
            z: 2.0,
        },
        Vector3 {
            x: 1.9999999990686774,
            y: 16.400000005960464,
            z: 1.9999999990686774,
        },
        Vector3 {
            x: 2.000000001862645,
            y: 12.800000011920929,
            z: 2.000000001862645,
        },
        Vector3 {
            x: 1.9999999962747097,
            y: 9.199999958276749,
            z: 1.9999999962747097,
        },
        Vector3 {
            x: 2.0,
            y: 5.5999999940395355,
            z: 2.0,
        },
        Vector3 {
            x: 2.0,
            y: 2.0,
            z: 2.0,
        },
        Vector3 {
            x: 2.0,
            y: -1.5999999940395355,
            z: 2.0,
        },
        Vector3 {
            x: 2.0,
            y: -5.199999988079071,
            z: 2.0,
        },
        Vector3 {
            x: 2.0,
            y: -8.799999982118607,
            z: 2.0,
        },
        Vector3 {
            x: 2.0000000074505806,
            y: -12.399999991059303,
            z: 2.0000000074505806,
        },
        Vector3 {
            x: 2.0,
            y: -16.0,
            z: 2.0,
        },
    ],
    [
        Vector3 {
            x: -0.08920645997052801,
            y: 0.10793540029472004,
            z: -0.9901475429766744,
        },
        Vector3 {
            x: -0.10572315857191537,
            y: 0.13307009899151867,
            z: -0.9854516540632346,
        },
        Vector3 {
            x: -0.12925535947769864,
            y: 0.17276569934272878,
            z: -0.9764451163157655,
        },
        Vector3 {
            x: -0.1644473206843054,
            y: 0.2435423268738216,
            z: -0.9558473799412947,
        },
        Vector3 {
            x: -0.21576839395081668,
            y: 0.39584849758075324,
            z: -0.8926073980955712,
        },
        Vector3 {
            x: -0.2113248654051872,
            y: 0.7886751345948129,
            z: -0.5773502691896258,
        },
        Vector3 {
            x: 0.18758172889417454,
            y: 0.8499346174436975,
            z: 0.49236596252778075,
        },
        Vector3 {
            x: 0.22184811977526298,
            y: 0.423194889906634,
            z: 0.8784585914595477,
        },
        Vector3 {
            x: 0.16935004397186484,
            y: 0.2548598080379022,
            z: 0.9520331091162803,
        },
        Vector3 {
            x: 0.13248076950212254,
            y: 0.1786192327389573,
            z: 0.9749584685553901,
        },
        Vector3 {
            x: 0.10792720111023596,
            y: 0.13658239111811232,
            z: 0.9847319278346618,
        },
    ],
)
